# ChangeLog for net-im/gnugadu
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gnugadu/ChangeLog,v 1.47 2007/02/22 02:20:51 peper Exp $

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  04 Dec 2006; Michał Januszewski <spock@gentoo.org> gnugadu-2.3.0.ebuild:
  Fix dependencies for dbus 1.0 (bug #154521).

*gnugadu-2.3.0 (23 Oct 2006)

  23 Oct 2006; Michał Januszewski <spock@gentoo.org> +gnugadu-2.3.0.ebuild:
  Version bump (bug #152438).

  11 Oct 2006; Karol Wojtaszek <sekretarz@gentoo.org>
  gnugadu-2.2.6-r1.ebuild, gnugadu-2.2.8.ebuild, gnugadu-2.2.9.ebuild:
  Changed version of net-im/libgadu in RDEPEND, because of new versioning scheme

*gnugadu-2.2.9 (16 Aug 2006)

  16 Aug 2006; Michał Januszewski <spock@gentoo.org> +gnugadu-2.2.9.ebuild:
  Version bump.

  02 Apr 2006; Michał Januszewski <spock@gentoo.org> -gnugadu-2.2.4.ebuild,
  -gnugadu-2.2.5.ebuild, -gnugadu-2.2.6.ebuild, gnugadu-2.2.8.ebuild:
  Added libXScrnSaver to the dependency list (bug #127633). Removed old ebuilds.

*gnugadu-2.2.8 (23 Oct 2005)

  23 Oct 2005; Michał Januszewski <spock@gentoo.org> +gnugadu-2.2.8.ebuild:
  Version bump.

  22 Jul 2005; <sekretarz@gentoo.org> gnugadu-2.2.6-r1.ebuild:
  Stable on x86 due security bug #99816

  21 Jul 2005; <sekretarz@gentoo.org> gnugadu-2.2.6-r1.ebuild:
  Added gnutls USE flag, bug #94277

*gnugadu-2.2.6-r1 (21 Jul 2005)

  21 Jul 2005; <sekretarz@gentoo.org> +gnugadu-2.2.6-r1.ebuild:
  Forced gnugadu to use external gg lib, because internal one has security
  holes. Added net-libs/libgadu to DEPEND. bug #99816

  07 Jul 2005; Michał Januszewski <spock@gentoo.org> gnugadu-2.2.6.ebuild:
  Marked stable on x86.

*gnugadu-2.2.6 (27 May 2005)

  27 May 2005; Michał Januszewski <spock@gentoo.org> gnugadu-2.2.5.ebuild,
  +gnugadu-2.2.6.ebuild:
  Version bump. Marked 2.2.5 stable on x86.
