@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gnugadu
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gnugadu/ChangeLog,v 1.47 2007/02/22 02:20:51 peper Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gnugadu/ChangeLog,v 1.48 2007/07/01 08:29:02 spock Exp $
+
+  30 Jun 2007; Michał Januszewski <spock@gentoo.org> gnugadu-2.3.0.ebuild:
+  Remove obsolete dbus dependency (bug #183696).
 
   22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
